<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_295"
                android:layout_height="@dimen/dp_55"
                android:scaleType="centerInside"
                android:src="@drawable/ic_slogan"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue_regular"
                android:text="@string/worker_check_in"
                android:textAllCaps="true"
                android:textColor="@color/doveGray"
                android:textSize="@dimen/sp_25"/>

            <com.madison.crisis.crisissuppervisor.extention.customview.inputview.SecondaryInputView
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_58"
                android:layout_marginTop="@dimen/dp_91"
                android:layout_marginEnd="@dimen/dp_58"
                app:siv_hint="@string/user_name"
                app:siv_inputType="text"
                app:siv_style="primary"/>

            <com.madison.crisis.crisissuppervisor.extention.customview.inputview.SecondaryInputView
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_58"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_58"
                app:siv_hint="@string/password"
                app:siv_inputType="password"
                app:siv_style="primary"/>

            <com.madison.crisis.crisissuppervisor.extention.customview.button.PrimaryButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_58"
                android:layout_marginTop="@dimen/dp_26"
                android:layout_marginEnd="@dimen/dp_58"
                app:pb_text="@string/login"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
