<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alizarinCrimson">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@id/btnScanAgain"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_213"
                android:layout_height="@dimen/dp_213"
                android:layout_marginTop="@dimen/dp_91"
                android:src="@drawable/ic_checkmark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_28"
                android:layout_marginEnd="@dimen/dp_30"
                android:fontFamily="@font/helvetica_neu_bold"
                android:includeFontPadding="false"
                android:text="@string/check_in_failed"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_25"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:fontFamily="@font/helvetica_neue_light"
                android:includeFontPadding="false"
                android:text="@string/please_contact_administrator"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18"/>
        </LinearLayout>
    </ScrollView>

    <com.madison.crisis.crisissuppervisor.extention.customview.button.PrimaryButton
        android:id="@+id/btnScanAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_58"
        android:layout_marginEnd="@dimen/dp_58"
        android:layout_marginBottom="@dimen/dp_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:pb_style="second"
        app:pb_text="@string/scan_again"/>
</androidx.constraintlayout.widget.ConstraintLayout>
